--- a/news_mood.ipynb
+++ b/news_mood.ipynb
@@ -16,10 +16,10 @@
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "analyzer = SentimentIntensityAnalyzer()\n",
     "\n",
-    "consumer_key = \"pdCc7SmhJ2AKFTUHMqgKg1LMd\"\n",
-    "consumer_secret = \"BAOXKPvj2dLtDDqTMV4E0zqcf1QBG0YBONtNAKptySpg1RAAJp\"\n",
-    "access_token = \"816573308-Ta2Ik5s3AlFDDxPD1CG5yd1ln7aTgY16pPtWEpUI\"\n",
-    "access_token_secret = \"PVSocESVeNwrQuwgCVIMcUNx4dmaTBts9dMLwFTzcBvPV\""
+    "consumer_key = "",
+    "consumer_secret = "",
+    "access_token = ",
+    "access_token_secret = ""
    ]
   },
   {
