--- a/news_mood.ipynb
+++ b/news_mood.ipynb
@@ -16,10 +16,10 @@
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
     "analyzer = SentimentIntensityAnalyzer()\n",
     "\n",
-    "consumer_key = "",
-    "consumer_secret = "",
+    "consumer_key = "","
+    "consumer_secret = "","
     "access_token = ",
-    "access_token_secret = ""
+    "access_token_secret = """
    ]
   },
   {
